log/build_2024-01-06_01-17-13/projekt_niodsr/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/borowa/ros2_ws/install/projekt_niodsr/lib/python3.10/site-packages/projekt_niodsr/publisher.py", line 35
    if self.cords[1] >= self.window_size[1]/3 && self.cords[1] < (self.window_size[1]/3)*2:
                                               ^
SyntaxError: invalid syntax

